Linting Java code